--- a/exercises.tex
+++ b/exercises.tex
@@ -1,5 +1,4 @@
 \documentclass{article}
-
 \usepackage[dutch]{babel}
 \usepackage{amsmath}
 \usepackage{hyperref}
@@ -162,7 +161,7 @@ dan kunnen we dit doen met de functie \verb:INT():.
 Bijvoorbeeld $\verb:PRINT:\ \verb:INT:(2/3)$ zal $0$ printen.
 
 Zoals u waarschijnlijk al is opgevallen is dat de basisoperatoren dezelfde prioriteit hebben als in de wiskunde.
-Let op dat er rekenmachines en computers waren stammend uit dezelfde tijd als de C64 die de prioriteit van operatoren kompleet negeerden!
+Let op dat er rekenmachines en computers waren stammend uit dezelfde tijd die de prioriteit van operatoren kompleet negeerden!
 Met behulp van haakjes kunt u berekeningen in een andere volgorde uitvoeren.
 
 \subsection{Variabelen}
