Fix mac download link, href click warning
On mac, the links are invisible, but opening the pdf in a browser works.

--- a/exercises.tex
+++ b/exercises.tex
@@ -28,6 +28,9 @@
 Deze opgavenbundel bevat een verzameling aan opgaven van langzaam toenemende moeilijkheidsgraad.
 Een deel van de opgaven zullen we ook tijdens de workshop klassikaal doornemen en variaties van laten zien.
 
+\emph{Let op dat het document links bevat waar u op kan klikken.
+Als er geen links te zien zijn met een blauw of rood vierkant dan kunt u ook de pdf in uw browser openen.}
+
 \subsection{VICE opzetten}
 Voor deze workshop gebruiken we de Versatile Commodore Emulator (VICE).
 Deze kunt u \href{http://vice-emu.sourceforge.net/}{hier} vinden.
@@ -49,17 +52,9 @@ U heeft \href{http://www.7-zip.org/}{7Zip} nodig om de emulator uit te pakken.
 Pak vervolgens de emulator uit en start \verb:x64sc.exe: op.
 
 \subsubsection{Mac}
-Download de \href{http://sourceforge.net/projects/vice-emu/files/releases/binaries/macosx/vice-macosx-sdl-x86_64-10.12-3.1.dmg/download}{mac versie}.
+Download de \href{http://sourceforge.net/projects/vice-emu/files/releases/binaries/macosx/vice-macosx-cocoa-x86_64-10.12-3.1.dmg/download}{mac versie}.
 Om de emulator te gebruiken moet de .dmg uitgepakt worden.
-Let op dat de emulator vanuit een terminal gestart moet worden omdat het optiemenu ontbreekt.
-
-Open de terminal en navigeer naar de map waar u de emulator heeft uitgepakt en start de emulator op. Bijvoorbeeld als u de emulator op uw bureaublad heeft gezet:
-\begin{lstlisting}
-cd /Users/gebruiker/Desktop/vice-emu/
-./x64sc.app/Contents/MacOS/x64sc
-\end{lstlisting}
-
-Vervang \verb:gebruiker: met uw gebruikersnaam.
+Klik met de rechtermuisknop (of met CTRL+linkermuisknop) op x64sc en dan op \verb:Open:.
 
 \subsection{Tips en Trucs}
 
