--- a/exercises_en.tex
+++ b/exercises_en.tex
@@ -28,6 +28,9 @@
 This bundle contains a set of exercises with increasing difficulty.
 The difficult exercises may be skipped.
 
+\emph{Please note that this document has embedded clickable links.
+If the text is not surrounded by a blue or red rectangle you can also try to open the pdf in your browser.}
+
 \subsection{VICE setup}
 This workshop uses the Versatile Commodore Emulator (VICE).
 You can download the emulator \href{http://vice-emu.sourceforge.net/}{from this site}.
@@ -49,17 +52,9 @@ You need \href{http://www.7-zip.org/}{7Zip} in order to extract the archive.
 Extract all files and run \verb:x64.exe:.
 
 \subsubsection{Mac}
-Download the \href{http://sourceforge.net/projects/vice-emu/files/releases/binaries/macosx/vice-macosx-sdl-x86_64-10.12-3.1.dmg/download}{mac version}.
+Download the \href{http://sourceforge.net/projects/vice-emu/files/releases/binaries/macosx/vice-macosx-cocoa-x86_64-10.12-3.1.dmg/download}{mac version}.
 You need to extract the .dmg in order to use the emulator.
-Please note that you have to run the emulator from a terminal because the menu bar is missing.
-
-Open a terminal and navigate to the directory where you just extracted the emulator and run the emulator. For example, if you have extracted the emulator on your desktop:
-\begin{lstlisting}
-cd /Users/name/Desktop/vice-emu/
-./x64.app/Contents/MacOS/x64
-\end{lstlisting}
-
-Replace \verb:name: with your user name.
+Right click (or using CTRL+left click) on x64sc and then on \verb:Open:.
 
 \subsection{Tips and Tricks}
 
