Fix introduction, credits and add intermezzo evaluation
It makes much more sense to leave the tutor, mentor and group fields
empty as we didn't make this as an exercise.

Dennis wasn't credited for the workshop preview although he attended it.
The answers as well as some observations are documented.

--- a/workshop.tex
+++ b/workshop.tex
@@ -21,10 +21,10 @@
 \authors{Folkert van Verseveld}
 \uvanetids{11839341}
 % XXX Tutor, mentor en docent niet echt van toepassing denk ik?
-\tutor{Teun Mathijssen}
+\tutor{}
 \mentor{}
-\docent{Robert van Wijk}
-\group{Assembly A2}
+\docent{}
+\group{}
 
 \begin{document}
 
