--- a/workshop_en.tex
+++ b/workshop_en.tex
@@ -21,10 +21,10 @@
 \authors{Folkert van Verseveld}
 \uvanetids{11839341}
 % XXX Tutor, mentor and docent are not necessary?
-\tutor{Teun Mathijssen}
+\tutor{}
 \mentor{}
-\docent{Robert van Wijk}
-\group{Assembly A2}
+\docent{}
+\group{}
 
 \begin{document}
 
