Fix broken link to adsr, add new ideas
The next workshop this year may need some changes and updates.
I added a few ideas and we will see if I can do anything about it.

--- a/workshop.tex
+++ b/workshop.tex
@@ -5,6 +5,10 @@
 %   @: folkert.van.verseveld@gmail.com
 %   @: folkert.vanverseveld@students.uva.nl
 %
+% TODO amstrad cpc6128?
+% TODO krill's loader c64 demo?
+% TODO meer basic
+% XXX assembly?
 
 \documentclass[aspectratio=43]{uva-inf-presentation}
 \usepackage[dutch]{babel}
