add resource scripts

--- a/exercises.tex
+++ b/exercises.tex
@@ -28,7 +28,7 @@
 Deze opgavenbundel bevat een verzameling aan opgaven van langzaam toenemende moeilijkheidsgraad.
 Een deel van de opgaven zullen we ook tijdens de workshop klassikaal doornemen en variaties van laten zien.
 
-\emph{Let op dat het document links bevat waar u op kan klikken.
+\emph{Let op dat het document hyperlinks bevat waar u op kan klikken.
 Als er geen links te zien zijn met een blauw of rood vierkant dan kunt u ook de pdf in uw browser openen.}
 
 \subsection{VICE opzetten}
