Add workshop-o-matic, increase intermezzo interval
A quick and dirty simple program that helps starting scripts and is
going to provide some eye candy. The intermezzo samples were shown very
quickly and this may be problematic during the presentation. Also limit
pwm script total time duration.

--- a/workshop.tex
+++ b/workshop.tex
@@ -34,7 +34,6 @@
 
 \begin{titelframe}
 \titlepage
-
 \end{titelframe}
 
 \begin{frame}
@@ -47,7 +46,7 @@
 \section{Programmeren in BASIC}
 \section{Graphics}
 \section{Muziek}
-\section{Intermezzo's en Opdrachten}
+\section{Intermezzo's}
 
 \section{Conclusies}
 
@@ -161,6 +160,18 @@
 \begin{figure}
 \includegraphics[width=0.75\linewidth]{images/nes.jpg}
 \end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Hoe zag de software er uit?}
+
+\begin{itemize}
+\item PC: Apple, C64, MS-DOS
+\item Consoles: Vectrex, VCS, NES
+\end{itemize}
 
 \end{frame}
 
