--- a/graphics.tex
+++ b/graphics.tex
@@ -224,12 +224,13 @@ Source: Duce
 
 %----------------------------------------------
 
-\begin{frame}{Intermezzo}
+\begin{frame}{Intermezzo - Eigen intro maken}
 
 \begin{itemize}
-\item RUN en speel met de programma's op roms/workshop/slides.d64
-\item Ga verder met de opgaven
-\item Of: schrijf een BASIC programma met wat grafische effecten
+\item Download roms.zip van de github repository
+\item Autostart de disk \verb:intro\_maker.d64:
+\item Attach \verb:voorbeelden.d64:
+\item Maak je eigen intro!
 \end{itemize}
 
 \end{frame}
