fix graphics, add intro maker to exercises

--- a/exercises.tex
+++ b/exercises.tex
@@ -268,6 +268,19 @@ Indien u meer programma's wilt schrijven kunt u hoofdstuk 3 en verder bekijken v
 Als u meer uitdaging wilt of meer wilt weten over de details van de Commodore 64 kunt u naar de \verb:Programmer's Reference Guide: kijken.
 Beide documenten zijn inbegrepen als u de release versie van de githubpagina heeft gedownload.
 
+\section{Maak je eigen intro}
+FieserwolF heeft een intro maker gemaakt waarmee u een eigen intro kunt maken!
+De gebruikersinstructies worden ook door het programma zelf uitgelegd, maar hier is een kort stappenplan:
+
+\begin{itemize}
+	\item Download roms.zip als u dit nog niet gedaan heeft en pak deze uit.
+	\item Autostart de disk \verb:intro_maker.d64: en wacht tot u het hoofdmenu ziet
+	\item Met SPATIE kunt u dingen selecteren en met ESCAPE annuleren.
+	\item Als u meer plaatjes wilt gebruiken kunt u \verb:voorbeelden.d64: aan drive 8 zetten.
+\end{itemize}
+
+Let op: als u uw creatie wilt opslaan dient u een nieuwe disk aan te sluiten en kunt u het opslaan via \verb:1 main->7 save intro:.
+
 \section{Appendix}
 
 \subsection{Commodore 64 programma's, spellen en demo's}
