--- a/graphics.tex
+++ b/graphics.tex
@@ -224,12 +224,13 @@ Source: Duce
 
 %----------------------------------------------
 
-\begin{frame}{Intermezzo - Eigen intro maken}
+\begin{frame}
+\frametitle{Intermezzo - Eigen intro maken}
 
 \begin{itemize}
 \item Download roms.zip van de github repository
-\item Autostart de disk \verb:intro\_maker.d64:
-\item Attach \verb:voorbeelden.d64:
+\item Autostart de disk intro\_maker.d64
+\item Attach voorbeelden.d64 voor meer plaatjes en muziek
 \item Maak je eigen intro!
 \end{itemize}
 
