--- a/workshop.tex
+++ b/workshop.tex
@@ -232,7 +232,8 @@
 
 %----------------------------------------------
 
-\begin{frame}{Intermezzo}
+\begin{frame}
+\frametitle{Intermezzo}
 
 \begin{itemize}
 \item Ga naar https://www.github.com/FolkertVanVerseveld
